# Robotics_arm

./: CMakeLists.txt  README.md  package.xml
config/: robot_arm_control.yaml
launch/: robotic_arm_control.launch  robotic_arm_gazebo.launch  robotic_arm_rviz.launch
urdf/: gripper.xacro  robotic_arm.gazebo  robotic_arm.xacro  robotic_arm2.xacro  robotic_arm3.xacro  robotic_arm4.xacro
